Added demo video link

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -44,8 +44,10 @@
       <li>Try any password you can think of. This won't allow you to log in and you will get an error.</li>
       <li>Put your password as "authenticate_user!" without the quotes. This calls a user method that lets the database know that the user is authenticated and can access things that only authenticated users can access, like the account page.</li>
       <li>You will get redirected to your account page.</li>
+      <li>Switch to the sql-free-branch.</li>
+      <li>Repeat the steps above, but this time you will not be able to log in </li>
     </ul>
-    <p>If you get confused along the way, be sure to check out the demo video here: <%= link_to 'Demo Video', 'https://www.youtube.com/', target: '_blank' %></p>
+    <p>If you get confused along the way, be sure to check out the demo video here: <%= link_to 'Demo Video', 'https://youtu.be/ZGhJeEqGO9k', target: '_blank' %></p>
   </div>
 </body>
 </html>
